--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,20 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.Navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #b17693;
+  padding: 10px; /* Adjust the padding as needed */
+  box-shadow: 0px 1px 2px gray;
+  width: 100%;
+  text-align: center;
+}
+
+.Navbar img {
+  width: 50px;
+  height: auto;
+  vertical-align: middle;
+}
