--- a/src/index.css
+++ b/src/index.css
@@ -72,9 +72,9 @@ button:focus-visible {
   position: fixed;
   top: 0;
   left: 0;
-  background: #b17693;
-  padding: 10px; /* Adjust the padding as needed */
-  box-shadow: 0px 1px 2px gray;
+  background: #d1181854;
+  padding: 10x; /* Adjust the padding to make the bar bigger or not */
+  box-shadow: 0px 1px 2px rgb(0, 0, 0);
   width: 100%;
   text-align: center;
 }
@@ -83,4 +83,5 @@ button:focus-visible {
   width: 50px;
   height: auto;
   vertical-align: middle;
+  margin: 0 10px;  /* spacing between icons */
 }
