--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -1,17 +1,22 @@
-.catalog-list{
-  
-    list-style: none;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
 
 
+
+.catalog-list {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
 }
 
 img {
-
-width: 20%;
-height: auto;
-
+  width: 100%;
+  height: auto;
 }
+
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
