--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -72,11 +76,14 @@ button:focus-visible {
   position: fixed;
   top: 0;
   left: 0;
-  background: #d1181854;
+  background: rgb(70, 69, 69);
   padding: 10x; /* Adjust the padding to make the bar bigger or not */
   box-shadow: 0px 1px 2px rgb(0, 0, 0);
   width: 100%;
   text-align: center;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
 
 .Navbar img {
