--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -35,6 +35,14 @@
   margin-bottom: 10px;
 }
 
+.app-title h3 {
+  color: rgb(65, 97, 145);
+  text-shadow: rgb(51, 51, 51) 0px 0px 5px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 .app-title p {
   color: rgb(255, 255, 255);
   text-shadow: rgb(0, 0, 0) 0px 0px 5px;
